--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js"
-  },
+  },  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/neha-dongre/Capstone-Project-Job-Listing.git"
@@ -21,9 +21,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "mongoose": "^7.5.2"
-  },
-  "devDependencies": {
+    "mongoose": "^7.5.2",
     "nodemon": "^3.0.1"
   }
 }
